--- a/generic.html
+++ b/generic.html
@@ -52,7 +52,7 @@
 										I’m particularly excited about blending data science with real-world applications — from forest fire prediction using satellite imagery to business analytics for optimizing sales and product strategies.
 										<br /> <br />
 										Beyond data, I’m a football enthusiast and love exploring sports analytics — because what’s better than combining a love for the game with the power of statistics?
-										Explore my projects and experiences, and feel free to connect — I’m always eager to collaborate, share ideas, and solve data-driven challenges. I completed my bachelors in Electronics and Communication from Vishwakarma Institute of Technology in India
+										Explore my projects and experiences, and feel free to connect — I’m always eager to collaborate, share ideas, and solve data-driven challenges.
 									
 									</p>
 								</header>
