--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Amitesh Patil<br />
 						</h1>
-						<p>Data Science, Data Analysis, Sports</p>
+						<p>Turning Data into Insights, Insights into Impact</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
