--- a/generic.html
+++ b/generic.html
@@ -48,10 +48,10 @@
 										I’m Amitesh Patil - a passionate Data Scientist.  I am currently a Master’s student in Computer Science at NC State University with a specialization in Data Science. My work revolves around turning complex data 
 										into impactful insights — whether it’s building predictive models, developing AI solutions, or designing data-driven strategies.
 										<br /> <br />
-										With hands-on experience in industries like energy (through my internship at Halliburton) and cutting-edge projects in remote sensing, machine learning, and geospatial AI, I’ve honed my skills in Python, SQL, data visualization, and deep learning frameworks.
-										I’m particularly excited about blending data science with real-world applications — from forest fire prediction using satellite imagery to business analytics for optimizing sales and product strategies.
+										With hands-on experience in the energy industry through my internship at Halliburton and cutting-edge projects in  machine learning, data antlytics and geospatial AI, I’ve honed my skills in Python, SQL, data visualization, machine learning and deep learning frameworks.
+										I’m particularly excited about blending data science with real-world applications — from forest fire risk prediction using satellite imagery to business analytics for optimizing sales and product strategies.
 										<br /> <br />
-										Beyond data, I’m a football enthusiast and love exploring sports analytics — because what’s better than combining a love for the game with the power of statistics?
+										Beyond data, I’m a football enthusiast and love exploring sports analytics — because what’s better than combining a love for the game with the power of statistics ?
 										Explore my projects and experiences, and feel free to connect — I’m always eager to collaborate, share ideas, and solve data-driven challenges.
 									
 									</p>
